Layout changes + addition of range slider Added range slider to html for future use Fixed flexbox alignment and Layout Changed height property of container

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,13 +19,30 @@
 .interface {
     display: flex;
     gap: 2vw;
+
+    justify-content: center;
+    align-items: center;
+
+    /*border: 10px solid black;*/
+}
+
+.userMenu {
+    display: flex;
+    flex-direction: column;
+
+    justify-content: center;
+    align-items: center;
+
+    /*border: 10px solid black;*/
+
+    gap: 15px;
 }
 
 #container {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
 
-    height: 8vh;
+    height: auto;
     width: 75vw;
 }
 
@@ -39,6 +56,7 @@
 
 
 button {
-    height: 100px;
+    height: 50px;
+    width: 100px;
 }
 
